pxc/tests/test_03_interface/inh_match2.px
namespace inh_match1;
import common -;

interface ifoo {
  function void m() const;
}

struct foo : ifoo : {
  function void m() { println("foo"); } // error: constness
}

function void t1() {
  ptr{ifoo} p = ptr(foo());
  p->m();
}

t1();
